2007-11-04  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Ole André Vadla Ravnås  <ole.andre.ravnas@tandberg.com>

	* gst-libs/gst/dshow/gstdshowfakesink.cpp:
	  (CDshowFakeSink.CDshowFakeSink):
	* gst-libs/gst/dshow/gstdshowfakesink.h: (CDshowFakeSink.m_hres):
	  Fix crasher in constructor due to the base class's constructor
	  not necessarily being NULL-safe (depends on the SDK version used
	  apparently; #492406).

	* sys/dshowsrcwrapper/gstdshowaudiosrc.c: (gst_dshowaudiosrc_prepare):
	* sys/dshowsrcwrapper/gstdshowvideosrc.c: (gst_dshowvideosrc_set_caps):
	  Fix a couple of MSVC compiler warnings (#492406).

2007-11-03  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/equalizer/demo.c: (main):
	* gst/equalizer/gstiirequalizer.c:
	(gst_iir_equalizer_band_class_init), (setup_filter):
	Allow setting 0 as bandwidth and handle this correctly.
	Also handle a bandwidth of rate/2 properly.

	* gst/equalizer/gstiirequalizernbands.c:
	(gst_iir_equalizer_nbands_class_init):
	Make it possible to generate a N-band equalizer with 1 bands. The
	previous limit of 2 was caused by a nowadays replaced calculation
	doing a division by zero if number of bands was 1.

2007-11-02  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Ole André Vadla Ravnås  <ole.andre.ravnas@tandberg.com>

	* gst/rtpmanager/gstrtpsession.c:
	  Fix bad function signatures (#492798).

2007-11-02  Edgard Lima  <edgard.lima@indt.org.br>

	* ext/metadata/Makefile.am:
	* ext/metadata/gstmetadataparse.c:
	* ext/metadata/gstmetadataparse.h:
	* ext/metadata/metadataparse.c:
	* ext/metadata/metadataparse.h:
	* ext/metadata/metadataparseexif.c:
	* ext/metadata/metadataparseexif.h:
	* ext/metadata/metadataparseiptc.c:
	* ext/metadata/metadataparseiptc.h:
	* ext/metadata/metadataparsejpeg.c:
	* ext/metadata/metadataparsejpeg.h:
	* ext/metadata/metadataparsepng.c:
	* ext/metadata/metadataparsepng.h:
	* ext/metadata/metadataparseutil.c:
	* ext/metadata/metadataparseutil.h: